<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/subquestion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/upvote1"
            android:text="@string/subquestion1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/subanswers1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:drawableLeft="@drawable/upvote6"
            android:text="@string/subanswer1a"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/subanswers1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:drawableLeft="@drawable/upvote7"
            android:text="@string/subanswer1b"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/subquestion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/upvote2"
            android:text="@string/subquestion2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/subanswer2a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:drawableLeft="@drawable/upvote8"
            android:text="@string/subanswer2a"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/subanswer2b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:drawableLeft="@drawable/upvote9"
            android:text="@string/subanswer2b"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/user_sub_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/post_question_sub"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/submit_sub_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="Submit"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>