<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/recquestion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/upvote1"
            android:text="@string/recquestion1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/recanswers1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:autoLink="web"
            android:drawableLeft="@drawable/upvote4"
            android:linksClickable="true"
            android:text="@string/recanswer1a"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="#316583" />

        <TextView
            android:id="@+id/recanswers1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:autoLink="web"
            android:drawableLeft="@drawable/upvote5"
            android:linksClickable="true"
            android:text="@string/recanswer1b"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="#316583" />

        <TextView
            android:id="@+id/recquestion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/upvote6"
            android:text="@string/recquestion2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/recanswer2a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:autoLink="web"
            android:drawableLeft="@drawable/upvote7"
            android:linksClickable="true"
            android:text="@string/recanswer2a"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="#316583" />

        <TextView
            android:id="@+id/recanswer2b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:autoLink="web"
            android:drawableLeft="@drawable/upvote9"
            android:linksClickable="true"
            android:layout_marginBottom="10dp"
            android:text="@string/recanswer2b"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="#316583" />

        <TextView
            android:id="@+id/user_recipe_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/post_question_recipe"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/submit_recipe_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="Submit"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>